<resources>
    <string name="app_name">swAPPing</string>
    <string name="title_home">Ogłoszenia</string>
    <string name="title_notifications">Powiadomienia</string>
    <string name="title_searching">Przeglądaj</string>
    <string name="title_new_announcement">Dodaj</string>
    <string name="title_profile">Profil</string>
    <string name="makeAccount">Utwórz konto</string>
    <string name="promptUsername">Nazwa użytkownika <font color='#FF0000'>*</font></string>
    <string name="promptPassword">Hasło <font color='#FF0000'>*</font></string>
    <string name="ButtonLogin">Zaloguj</string>
    <string name="ButtonRegister">Utwórz konto</string>
    <string name="firstName">Imię</string>
    <string name="phoneNumber">Numer telefonu</string>
    <string name="registerError">Spróbuj ponownie</string>
    <string name="dateOfBirth"><font color='#FF0000'>*</font> Mam ukończone 18 lat.</string>
    <string name="city">Miejsce zamieszkania </string>
    <string name="permission"><font color='#FF0000'>*</font> Wyrażam zgodę na przetwarzanie moich danych w celu korzystania z aplikacji „swAPPing”.</string>
    <string name="RegisterActivity">Rejestracja</string>
    <string name="promptEmail">Adres e-mail <font color='#FF0000'>*</font></string>
    <string name="title">Tytuł</string>
    <string name="username">Username</string>
    <string name="announcement_image">Announcement image</string>
    <string name="addTitle">Tytuł <font color='#FF0000'>*</font></string>
    <string name="addPhoto">Dodaj zdjęcie</string>
    <string name="addDescription">Opis <font color='#FF0000'>*</font></string>
    <string name="addLocationCity">Miasto</string>
    <string name="addLocationVoivodeship">Województwo: <font color='#FF0000'>*</font></string>
    <string name="addCat">Kategoria: <font color='#FF0000'>*</font></string>
    <string name="addSta">Stan zużycia: <font color='#FF0000'>*</font></string>
    <string name="addCategory">Kategoria:\t</string>
    <string name="radio_button">Radio Button</string>
    <string name="addState">Stan zużycia:\t</string>
    <string name="addAnnouncementButton">Dodaj ogłoszenie</string>
    <string name="saveData">zapisz</string>
    <string name="currentEmail">email</string>
    <string name="follow">Zaobserwuj</string>
    <string name="followersNumber">0</string>
    <string name="followers">Obserwujący</string>
    <string name="followingNumber">0</string>
    <string name="following">Obserwowani</string>
    <string name="contactTitle">Kontakt:</string>
    <string name="emailTitle">Adres e-mail: \t</string>
    <string name="phoneNumberTitle">Tel.: \t</string>
    <string name="reviewsTitle">Oceny: \t</string>
    <string name="meanRateTitle">Średnia ocena: </string>
    <string name="adsTitle">Ogłoszenia</string>
    <string name="reviewerName">Username</string>
    <string name="rate">0/5</string>
    <string name="addReview">Dodaj opinię: \t</string>
    <string name="swapping">SWAPPING</string>
    <string name="addReviewDescription">Dodaj opis...</string>
    <string name="add">Dodaj</string>
    <string name="chooseRateAlert">Wybierz ocenę!</string>
    <string name="opinion">Opinia...</string>
    <string name="title_activity_ad_details">AdDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="description">Opis przedmiotu</string>
    <string name="voivodeship">Województwo</string>
    <string name="location">Lokalizacja:\t</string>
    <string name="editAd">Edytuj</string>
    <string name="changePhoto">Zmień zdjęcie</string>
    <string name="deleteAd">Usuń</string>
    <string name="name">Nazwa</string>
    <string name="state">Stan ogłoszenia</string>
    <string name="usersTitle">Użytkownicy</string>
    <string name="categoryTitle">Kategoria</string>
    <string name="localizationTitle">Lokalizacja</string>
    <string name="like">Polub</string>
    <string name="sort">Sortuj</string>
    <string name="reset">Resetuj</string>
    <string name="noResults">Nic nie znaleziono</string>
    <string name="date">date</string>
    <string name="unfollow">Przestań obserwować</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>