<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.swapping.ui.AdDetails.AdDetailsActivity">
    <item
        android:id="@+id/menu_editAd"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/editAd"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_deleteAd"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/deleteAd"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_purchased"
        android:checkable="false"
        android:enabled="false"
        android:icon="@drawable/bought_icon"
        android:title="@string/state"
        android:visible="false" />
</menu>