<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notificationRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/notificationAdTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/notificationUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_weight="1"
        android:text="@string/username"
        android:textSize="17sp"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/notificatioType"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:paddingStart="10dp"
        android:text="@string/name"
        android:src="@drawable/ic_baseline_new_releases_24"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"/>

</LinearLayout>