<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingStart="15dp">

    <CheckBox
        android:id="@+id/adCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center" />

    <ImageView
        android:id="@+id/adImage"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:contentDescription="@string/announcement_image"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/adTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/adUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:padding="2dp"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"/>



</LinearLayout>