<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailRegisterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:boxBackgroundColor="#F3F3F3">

                    <EditText
                        android:id="@+id/emailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/promptEmail"
                        app:hintEnabled = "true"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameRegisterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:boxBackgroundColor="#F3F3F3">

                    <EditText
                        android:id="@+id/usernameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/username"
                        app:hintEnabled = "true"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordRegisterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:boxBackgroundColor="#F3F3F3"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/passwordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/promptPassword"
                        app:hintEnabled = "true"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameRegisterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:boxBackgroundColor="#F3F3F3">

                    <EditText
                        android:id="@+id/nameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/firstName"
                        app:hintEnabled = "true"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneRegisterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:boxBackgroundColor="#F3F3F3">

                    <EditText
                        android:id="@+id/phoneRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/phoneNumber"
                        app:hintEnabled = "true"
                        android:inputType="phone"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cityRegisterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:boxBackgroundColor="#F3F3F3">

                    <EditText
                        android:id="@+id/cityRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/city"
                        app:hintEnabled = "true"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:text="@string/ButtonRegister"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />


                <CheckBox
                    android:id="@+id/dateOfBirthCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dateOfBirth" />

                <CheckBox
                    android:id="@+id/permissionCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission" />

                <TextView
                    android:id="@+id/verifyRegisterData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/registerError"
                    android:textSize="16sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>